# test

./: .gitignore  .gitmodules  Cargo.toml  Makefile  as.sublime-project  build-lib.sh  container_build_script.sh  makefile.bat  transformers-ao-0.1.0-1.rockspec  transformers_ao-0.1.0-1.rockspec  wasm_build.sh
.cargo/: config.toml
docker/: Dockerfile  README.md
lua-to-aos-compiler/: Dockerfile
lua-to-aos-compiler/src/: definition.yml  emcc-lua  emcc-lua_original  main.c
lua-to-aos-compiler/src/emcc_lua_lib/: definition.py  file.py  helper.py
output/: mymodule.lua  transformers_ao-0.1.0-1.linux-x86_64.rock
src/: lib.rs
testcrate/: Cargo.toml
testcrate/.cargo/: config.toml
testcrate/tests/: tests.rs
