[package]
name = "transformers-ao"
version = "0.1.0"
edition = "2021"
description = "transformers_ao."
keywords = ["ao", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT"

[features]
#lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
#lua52 = ["mlua/lua52"]
#lua51 = ["mlua/lua51"]

[lib]
name = "transformers_ao"
crate-type = ["cdylib"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
#candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
hf-hub = "0.3.0"
num-traits = "0.2.15"
fancy-regex = "0.13.0"

# App crates.
#anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
safetensors = "0.4.1"
base64 = "0.22.1"

#ab_glyph = "0.2.23"
#accelerate-src = { version = "0.3.2" }
#half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
image = { version = "0.25.0", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.24.0", default-features = false }
#memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
#num_cpus = "1.15.0"
#serde_plain = "1.0.2"

# Wasm specific crates.
#console_error_panic_hook = "0.1.7"
#getrandom = { version = "0.2", features = ["js"] }
#gloo = "0.11"
#js-sys = "0.3.64"
#log = "0.4"
#wasm-bindgen = "0.2.87"
#serde-wasm-bindgen = "0.6.0"
#clap = { version = "4.5.4", features = ["derive"] }

[dependencies.mlua]
version = "0.9.7"
default-features = false
features = [
#    "lua53",
    "module",
    "serialize"
]

[dependencies.onig]
version = "6.1.0"
default-features = false
optional = true

[dependencies.tokenizers]
version = "0.19.1"
default-features = false
features = ["unstable_wasm"]
git = "https://github.com/huggingface/tokenizers"
tag = "v0.19.1"



[profile.release-with-debug]
inherits = "release"
debug = true